k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tasks-spa
  namespace: default
  labels:
    app: tasks-spa
spec:
  ports:
    - name: tasks-spa-http
      port: 8080
      targetPort: 8080
  selector:
    app: tasks-spa
  type: ClusterIP
